# parkmail-cpp-programming

./: .gitignore  README.md
.github/workflows/: github-actions.yml  homework_2.yml
homework_1/: CMakeLists.txt
homework_1/.github/workflows/: github-actions.yml
homework_1/cmd/: main.c
homework_1/parsetag/: CMakeLists.txt
homework_1/parsetag/include/: error_codes.h  string_array.h  tag.h
homework_1/parsetag/src/: string_array.c  tag.c
homework_1/parsetag/tests/: CMakeLists.txt  test_string_array.cpp  test_tag.cpp
homework_1/src/: main.c
homework_2/: CMakeLists.txt  main.c
homework_2/examples/: main.c
homework_2/examples/basic_example_1/: CMakeLists.txt
homework_2/examples/basic_example_1/src/: main.c
homework_2/examples/data/: 1.txt
homework_2/examples/measure_time/: CMakeLists.txt
homework_2/examples/measure_time/data/: 100mb.txt  10mb.txt  1gb.txt  1mb.txt
homework_2/examples/measure_time/mood/: CMakeLists.txt
homework_2/examples/measure_time/mood/src/: measure_time_mood.c  simple_test.c
homework_2/examples/measure_time/mood_mp/: CMakeLists.txt
homework_2/examples/measure_time/mood_mp/src/: measure_time_mood_mp.c
homework_2/lib/errors/: CMakeLists.txt
homework_2/lib/mood/: CMakeLists.txt
homework_2/lib/mood/include/mood/: mood_determine.h  test_func.h
homework_2/lib/mood/src/: mood_determine.c  test_func.c
homework_2/lib/mood/tests/: CMakeLists.txt
homework_2/lib/mood/tests/src/unit/: test_mood_determine.cpp
homework_2/lib/mood_common/: CMakeLists.txt
homework_2/lib/mood_common/include/mood_common/: errors.h  mood_common.h  mood_state.h
homework_2/lib/mood_common/src/: errors.c  mood_common.c
homework_2/lib/mood_mp/: CMakeLists.txt
homework_2/lib/mood_mp/include/mood/: mood_determine.h
homework_2/lib/mood_mp/include/mood_mp/: test_func.h
homework_2/lib/mood_mp/src/: mood_determine.c  test_func.c  worker_process.h
homework_2/lib/mood_mp/tests/: CMakeLists.txt
homework_2/lib/mood_mp/tests/src/unit/: test_mood_determine.cpp
homework_2/lib/moodcheck/: CMakeLists.txt
homework_2/lib/moodcheck/src/: test_func.c
homework_2/lib/moodcheck_mp/: CMakeLists.txt
homework_2/lib/moodcheck_mp/src/: test_func.c
homework_2/lib/reader_utils/: CMakeLists.txt
homework_2/lib/reader_utils/include/reader_utils/: read_file.h  test_func.h
homework_2/lib/reader_utils/src/: read_file.c  test_func.c
homework_2/lib/reader_utils/tests/: CMakeLists.txt
homework_2/lib/reader_utils/tests/data/: 1.txt
homework_2/lib/reader_utils/tests/src/unit/: test_reader_utils.cpp
homework_2/scripts/: datagen.py
homework_2/src/moodcheck/: CMakeLists.txt
homework_2/src/moodcheck/include/: test_func.h
homework_2/src/moodcheck/src/: test_func.c
homework_2/tests/stress/: CMakeLists.txt
homework_2/tests/stress/scripts/: datagen.py
homework_2/tests/stress/src/: stress_mood.cpp  stress_mood_mp.cpp
